index首页的完成

--- a/home/index.html
+++ b/home/index.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
     <link rel="stylesheet" href="/assets/fonts/iconfont.css" />
     <link rel="stylesheet" href="/assets/css/index.css" />
+    <script>
+      let token = localStorage.getItem("token");
+      if (!token) {
+        location.href = "/home/login.html";
+      }
+    </script>
   </head>
   <body class="layui-layout-body">
     <div class="layui-layout layui-layout-admin">
@@ -31,19 +37,33 @@
           <li class="layui-nav-item">
             <a href="javascript:;">
               <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
+              <!--上方 头像图片 -->
+              <span class="via">Q</span>
               个人中心
             </a>
+
             <dl class="layui-nav-child">
-              <dd><a href="">基本资料</a></dd>
-              <dd><a href="">安全设置</a></dd>
+              <dd><a href="javascript:;">基本资料</a></dd>
+              <dd><a href="javascript:;">更换头像</a></dd>
+              <dd><a href="javascript:;">重置密码</a></dd>
             </dl>
           </li>
-          <li class="layui-nav-item"><a href="">退出</a></li>
+          <li class="layui-nav-item">
+            <a href="javascript:;" class="outBtn"
+              ><span class="iconfont icon-tuichu"></span>退出</a
+            >
+          </li>
         </ul>
       </div>
 
       <div class="layui-side layui-bg-black">
         <div class="layui-side-scroll">
+          <li class="layui-nav-item title">
+            <!-- 左侧 头像 -->
+            <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
+            <span class="via">Q</span>
+            <span id="welcome">欢迎 qian98</span>
+          </li>
           <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
           <ul
             class="layui-nav layui-nav-tree"
@@ -51,7 +71,7 @@
             lay-filter="test"
           >
             <li class="layui-nav-item layui-this">
-              <a href="javascript:;"
+              <a href="/home/dashboard.html" target="fr"
                 ><span class="iconfont icon-home"></span>首页</a
               >
             </li>
@@ -60,9 +80,21 @@
                 ><span class="iconfont icon-16"></span>文章管理</a
               >
               <dl class="layui-nav-child">
-                <dd><a href="javascript:;">文章类别</a></dd>
-                <dd><a href="javascript:;">文章列表</a></dd>
-                <dd><a href="javascript:;">发布文章</a></dd>
+                <dd>
+                  <a href="javascript:;"
+                    ><i class="layui-icon layui-icon-app"></i>文章类别</a
+                  >
+                </dd>
+                <dd>
+                  <a href="javascript:;"
+                    ><i class="layui-icon layui-icon-app"></i>文章列表</a
+                  >
+                </dd>
+                <dd>
+                  <a href="javascript:;"
+                    ><i class="layui-icon layui-icon-app"></i>发布文章</a
+                  >
+                </dd>
               </dl>
             </li>
             <li class="layui-nav-item">
@@ -70,9 +102,21 @@
                 ><span class="iconfont icon-user"></span>个人中心</a
               >
               <dl class="layui-nav-child">
-                <dd><a href="javascript:;">基本资料</a></dd>
-                <dd><a href="javascript:;">更换头像</a></dd>
-                <dd><a href="javascript:;">重置密码</a></dd>
+                <dd>
+                  <a href="javascript:;"
+                    ><i class="layui-icon layui-icon-app"></i>基本资料</a
+                  >
+                </dd>
+                <dd>
+                  <a href="javascript:;"
+                    ><i class="layui-icon layui-icon-app"></i>更换头像</a
+                  >
+                </dd>
+                <dd>
+                  <a href="javascript:;"
+                    ><i class="layui-icon layui-icon-app"></i>重置密码</a
+                  >
+                </dd>
               </dl>
             </li>
           </ul>
@@ -81,12 +125,12 @@
 
       <div class="layui-body">
         <!-- 内容主体区域 -->
-        <div style="padding: 15px">内容主体区域</div>
+        <iframe src="/home/dashboard.html" name="fr" class="fr"></iframe>
       </div>
 
       <div class="layui-footer">
         <!-- 底部固定区域 -->
-        © layui.com - 底部固定区域
+        © www.itheima.com - 黑马程序员
       </div>
     </div>
     <script src="/assets/lib/layui/layui.all.js"></script>
