个人资料的完成 user_info

--- a/home/index.html
+++ b/home/index.html
@@ -103,7 +103,7 @@
               >
               <dl class="layui-nav-child">
                 <dd>
-                  <a href="javascript:;"
+                  <a href="/user/user_info.html" target="fr"
                     ><i class="layui-icon layui-icon-app"></i>基本资料</a
                   >
                 </dd>
@@ -125,7 +125,13 @@
 
       <div class="layui-body">
         <!-- 内容主体区域 -->
-        <iframe src="/home/dashboard.html" name="fr" class="fr"></iframe>
+        <!-- <iframe src="/home/dashboard.html" name="fr" class="fr"></iframe> -->
+        <iframe
+          src="/user/user_info.html"
+          name="fr"
+          class="fr"
+          frameborder="0"
+        ></iframe>
       </div>
 
       <div class="layui-footer">
