重置密码完成

--- a/home/index.html
+++ b/home/index.html
@@ -113,7 +113,7 @@
                   >
                 </dd>
                 <dd>
-                  <a href="javascript:;"
+                  <a href="/user/user_pwd.html" target="fr"
                     ><i class="layui-icon layui-icon-app"></i>重置密码</a
                   >
                 </dd>
@@ -125,12 +125,12 @@
 
       <div class="layui-body">
         <!-- 内容主体区域 -->
-        <!-- <iframe src="/home/dashboard.html" name="fr" class="fr"></iframe> -->
+        <!-- <iframe src="/home/dashboard.html" name="fr" class="fr" frameborder="0"></iframe> -->
         <iframe
-          src="/user/user_info.html"
+          src="/user/user_pwd.html"
           name="fr"
-          class="fr"
           frameborder="0"
+          class="fr"
         ></iframe>
       </div>
 
