--- a/home/index.html
+++ b/home/index.html
@@ -108,7 +108,7 @@
                   >
                 </dd>
                 <dd>
-                  <a href="javascript:;"
+                  <a href="/user/user_avatar.html" target="fr"
                     ><i class="layui-icon layui-icon-app"></i>更换头像</a
                   >
                 </dd>
@@ -127,7 +127,7 @@
         <!-- 内容主体区域 -->
         <!-- <iframe src="/home/dashboard.html" name="fr" class="fr" frameborder="0"></iframe> -->
         <iframe
-          src="/user/user_pwd.html"
+          src="/user/user_avatar.html"
           name="fr"
           frameborder="0"
           class="fr"
